back to home 버튼 변경

--- a/components/header.html
+++ b/components/header.html
@@ -2,6 +2,6 @@
     <h1>{{title}}</h1>
     <p>{{subtitle}}</p>
     {{#if showBackLink}}
-    <a href="index.html" aria-label="Back to Home">← Back to Home</a>
+    <a href="index.html" aria-label="Back to Home">Back to Home</a>
     {{/if}}
 </header>
